manifests/kubevirt/iiab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iiab-svc
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
  selector:
    vmname: iiab
  type: LoadBalancer
