manifests/kubevirt/ubuntu-desktop.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-desktop-svc
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
    name: ssh
  - port: 8444
    protocol: TCP
    targetPort: 8444
    name: vnc1
  - port: 8445
    protocol: TCP
    targetPort: 8445
    name: vnc2
  selector:
    kubevirt.io/domain: ubuntu-desktop
  type: LoadBalancer
